--- a/flash-pay/bankDetails.html
+++ b/flash-pay/bankDetails.html
@@ -30,6 +30,7 @@
         display: flex;
         flex-direction: column;
         font-family: 'Poppins', sans-serif;
+        overflow-y: hidden;
       }
 
       .main-content {
