--- a/flash-pay/dashboard.html
+++ b/flash-pay/dashboard.html
@@ -19,6 +19,7 @@
     body {
       background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
       min-height: 100vh;
+      overflow-y: hidden;
     }
 
     .card {
