--- a/flash-pay/index.html
+++ b/flash-pay/index.html
@@ -14,6 +14,7 @@
         background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
         min-height: 100vh;
         font-family: "Poppins", sans-serif;
+        overflow-y: hidden;
       }
       .btn-primary {
         background: linear-gradient(135deg, #0ea5e9 0%, #0d9488 100%);
@@ -26,6 +27,10 @@
       input:focus {
         outline: none;
         box-shadow: 0 0 0 2px rgba(14, 165, 233, 0.3);
+      }
+      #password:focus{
+        outline: none;
+        box-shadow: none;
       }
         .toast {
     visibility: hidden;
@@ -61,7 +66,7 @@
         Create account
       </h2>
 
-      <form id="signupForm" class="space-y-4">
+      <form id="signupForm" class="space-y-4 focus:ring-0">
         <div>
           <label class="block text-gray-700 font-medium mb-1">Username</label>
           <input
@@ -90,7 +95,7 @@
           </p>
         </div>
 
-        <div>
+       <div>
           <label class="block text-gray-700 font-medium mb-1">Password</label>
           <div
             class="flex items-center px-4 py-2 border rounded-lg text-gray-700"
@@ -125,17 +130,6 @@
         >
       </p>
     </div>
-    <!-- <script>
-      const passwordInput = document.getElementById("password");
-      const togglePassword = document.getElementById("togglePassword");
-
-      togglePassword.addEventListener("click", () => {
-        const type = passwordInput.type === "password" ? "text" : "password";
-        passwordInput.type = type;
-        togglePassword.classList.toggle("fa-eye");
-        togglePassword.classList.toggle("fa-eye-slash");
-      });
-    </script> -->
     <script src="./js/signup.js"></script>
   </body>
 </html>
