--- a/flash-pay/login.html
+++ b/flash-pay/login.html
@@ -14,6 +14,7 @@
         background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
         min-height: 100vh;
         font-family: "Poppins", sans-serif;
+        overflow-y: hidden;
       }
       .btn-primary {
         background: linear-gradient(135deg, #0ea5e9 0%, #0d9488 100%);
@@ -53,6 +54,10 @@
     opacity: 1;
     bottom: 50px;
   }
+  #password:focus{
+        outline: none;
+        box-shadow: none;
+      }
     </style>
   </head>
   <body class="flex items-center justify-center p-4">
