--- a/flash-pay/plans.html
+++ b/flash-pay/plans.html
@@ -6,7 +6,13 @@
   <title>My Plans</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body{
+      overflow-y: hidden;
+    }
+  </style>
 </head>
+
 <body class="bg-gray-100 min-h-screen flex flex-col ">
  <div id="header" class="sticky top-0 z-[1000] flex justify-center">
          <header class="w-full max-w-4xl">
