--- a/flash-pay/withdrawal.html
+++ b/flash-pay/withdrawal.html
@@ -27,6 +27,7 @@
         padding-bottom: 80px;
         display: flex;
         flex-direction: column;
+        overflow-y: hidden;
       }
 
       .main-content {
