--- a/flash-pay/withdrawal.html
+++ b/flash-pay/withdrawal.html
@@ -107,7 +107,11 @@
             <p class="text-gray-600 text-sm text-center">
               Select your wallet and enter the amount you wish to withdraw.
             </p>
+       
             <form id="withdrawForm" class="space-y-4">
+                   <p class="note p-2 text-white text-sm font-semibold rounded-lg">
+            Note: Minimum withdrawal is 2000
+          </p>
               <div>
                 <label class="block text-gray-700 font-medium mb-1"
                   >Select Wallet (Optional)</label
