--- a/flash-pay/dashboard.html
+++ b/flash-pay/dashboard.html
@@ -207,7 +207,7 @@
               <i class="fas fa-university text-white text-lg"></i>
             </div>
             <p class="text-xs sm:text-sm md:text-base
- font-medium text-gray-700 mt-1 group-hover:text-primary-600">
+ font-small text-gray-700 mt-1 group-hover:text-primary-600">
               Bank details
             </p>
           </a>
