--- a/flash-pay/dashboard.html
+++ b/flash-pay/dashboard.html
@@ -207,8 +207,8 @@
               <i class="fas fa-university text-white text-lg"></i>
             </div>
             <p class="text-xs sm:text-sm md:text-base
- font-small text-gray-700 mt-1 group-hover:text-primary-600">
-              Bank details
+ font-medium text-gray-700 mt-1 group-hover:text-primary-600">
+              Bank
             </p>
           </a>
 
