--- a/flash-pay/bankDetails.html
+++ b/flash-pay/bankDetails.html
@@ -78,7 +78,7 @@
       <!-- Bank Details Card -->
       <div
         id="bankDetailsDiv"
-        class="bg-white shadow-lg rounded-2xl border border-gray-100 p-6 sm:p-8 mt-6 mx-auto w-full max-w-lg hidden"
+        class="bg-white shadow-lg rounded-2xl border border-gray-100 p-6 sm:p-8 mt-6 mx-auto w-full max-w-lg"
       >
         <h2 class="text-2xl font-bold text-gray-800 mb-4 text-center sm:text-left">
           Bank Details
