--- a/flash-pay/withdrawal.html
+++ b/flash-pay/withdrawal.html
@@ -121,7 +121,7 @@
                 >
                   <option value="">-- Choose Wallet --</option>
                   <option value="welfare">welfare</option>
-                  <option value="recharge">investment</option>
+                  <option value="investment">investment</option>
                 </select>
               </div>
 
