--- a/flash-pay/history.html
+++ b/flash-pay/history.html
@@ -138,9 +138,23 @@
           <!-- JS Injected Content -->
         </div>
       </div>
+      <div class="bg-white rounded-xl shadow-lg card overflow-hidden mb-4">
+        <div
+          class="p-4 sm:p-6 border-b border-gray-200 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-2"
+        >
+          <h3 class="text-lg font-semibold text-gray-800">
+            Recent Deposits
+          </h3>
+        </div>
+
+        <div id="depositHistoryContainer" class="p-4 bg-white rounded-xl shadow-sm"></div>
+          <!-- JS Injected Content -->
+        </div>
+         <div id="footer" class="fixed md:sticky bottom-0 w-full z-[1000]"></div>
+      </div>
 
       <!-- Footer -->
-      <div id="footer" class="fixed md:sticky bottom-0 w-full z-[1000]"></div>
+     
     </div>
 
     <script src="./js/app.js"></script>
