--- a/flash-pay/dashboard.html
+++ b/flash-pay/dashboard.html
@@ -185,7 +185,7 @@
             </p>
           </a>
 
-          <a href="https://t.me/+K12zbGu3KtYyYmFK" class="flex flex-col items-center cursor-pointer group">
+          <a href="https://t.me/+-8JUcT7wFI4zMGNk" class="flex flex-col items-center cursor-pointer group">
             <div class="icon-container group-hover:shadow-lg">
               <i class="fab fa-telegram text-white text-lg"></i>
             </div>
