--- a/flash-pay/footer.html
+++ b/flash-pay/footer.html
@@ -74,7 +74,7 @@
           <p class="text-xs font-medium text-gray-700 mt-1">Plans</p>
         </a>
 
-        <a href="https://wa.me/message/JHIUM4UB36FBK1" class="footer-item">
+        <a href="https://wa.me/qr/SIKGW7DBALAFA1" class="footer-item">
           <div class="footer-icon-container">
             <i class="fas fa-headset text-white text-sm"></i>
           </div>
