--- a/flash-pay/deposit.html
+++ b/flash-pay/deposit.html
@@ -124,7 +124,7 @@
             <div class="flex justify-between items-center mb-4">
               <div>
                 <p class="text-sm text-gray-300">Bank Name</p>
-                <p class="font-semibold">Access Bank</p>
+                <p class="font-semibold">Monie point</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
@@ -137,7 +137,7 @@
             <div class="flex justify-between items-center mb-4">
               <div>
                 <p class="text-sm text-gray-300">Account Name</p>
-                <p class="font-semibold">John Chinedu</p>
+                <p class="font-semibold">Disney sunny Edunam</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
@@ -150,7 +150,7 @@
             <div class="flex justify-between items-center">
               <div>
                 <p class="text-sm text-gray-300">Account Number</p>
-                <p class="font-semibold">0034567890</p>
+                <p class="font-semibold">5142492615</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
