--- a/flash-pay/deposit.html
+++ b/flash-pay/deposit.html
@@ -128,7 +128,7 @@
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('Access Bank', 'bank')"
+                onclick="copyToClipboard('Monie point', 'bank')"
               >
                 <i class="fas fa-copy"></i>
               </button>
@@ -141,7 +141,7 @@
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('John Chinedu', 'account')"
+                onclick="copyToClipboard('Disney Sunny Eduna', 'account')"
               >
                 <i class="fas fa-copy"></i>
               </button>
@@ -154,7 +154,7 @@
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('0034567890', 'number')"
+                onclick="copyToClipboard('5142492615', 'number')"
               >
                 <i class="fas fa-copy"></i>
               </button>
