--- a/flash-pay/bankDetails.html
+++ b/flash-pay/bankDetails.html
@@ -28,6 +28,7 @@
         background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
         min-height: 100vh;
         display: flex;
+        justify-content: center;
         flex-direction: column;
         font-family: 'Poppins', sans-serif;
       }
@@ -70,10 +71,11 @@
     </style>
   </head>
 
-  <body>
+  <body class="max-w-4xl mx-auto w-full space-y-8">
+    <div id="header" class="sticky top-0 z-[1000]"></div>
     <div class="main-content max-w-4xl mx-auto w-full space-y-8">
       <!-- Header -->
-      <div id="header" class="sticky top-0 z-[1000]"></div>
+      
 
       <!-- Bank Details Card -->
       <div
@@ -175,9 +177,9 @@
         </div>
       </div>
 
-      <!-- Footer -->
-      <div id="footer" class="fixed w-full md:sticky bottom-0 z-[1000]"></div>
+     
     </div>
+    <div id="footer" class="fixed w-full md:sticky bottom-0 z-[1000]"></div>
 
     <script src="./js/bankDetails.js"></script>
     <script src="./js/app.js"></script>
