--- a/flash-pay/bankDetails.html
+++ b/flash-pay/bankDetails.html
@@ -71,7 +71,7 @@
     </style>
   </head>
 
-  <body class="max-w-4xl mx-auto w-full space-y-8">
+  <body class="max-w-4xl mx-auto w-full ">
     <div id="header" class="sticky top-0 z-[1000]"></div>
     <div class="main-content max-w-4xl mx-auto w-full space-y-8">
       <!-- Header -->
