--- a/flash-pay/deposit.html
+++ b/flash-pay/deposit.html
@@ -124,11 +124,11 @@
             <div class="flex justify-between items-center mb-4">
               <div>
                 <p class="text-sm text-gray-300">Bank Name</p>
-                <p class="font-semibold">Monie point</p>
+                <p class="font-semibold">Kuda Bank</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('Monie point', 'bank')"
+                onclick="copyToClipboard('Kuda Bank', 'bank')"
               >
                 <i class="fas fa-copy"></i>
               </button>
@@ -137,11 +137,11 @@
             <div class="flex justify-between items-center mb-4">
               <div>
                 <p class="text-sm text-gray-300">Account Name</p>
-                <p class="font-semibold">Disney Sunny Edunam</p>
+                <p class="font-semibold">Fundex Hub</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('Disney Sunny Eduna', 'account')"
+                onclick="copyToClipboard('Fundex Hub', 'account')"
               >
                 <i class="fas fa-copy"></i>
               </button>
@@ -150,11 +150,11 @@
             <div class="flex justify-between items-center">
               <div>
                 <p class="text-sm text-gray-300">Account Number</p>
-                <p class="font-semibold">5142492615</p>
+                <p class="font-semibold">3002874015</p>
               </div>
               <button
                 class="copy-btn bg-dark bg-opacity-20 p-2 rounded-lg"
-                onclick="copyToClipboard('5142492615', 'number')"
+                onclick="copyToClipboard('3002874015', 'number')"
               >
                 <i class="fas fa-copy"></i>
               </button>
